Run app commands commit

--- a/03 - Sending Data to Templates/templates/market.html
+++ b/03 - Sending Data to Templates/templates/market.html
@@ -55,7 +55,7 @@
                     <td>{{ item.id }}</td>
                     <td>{{ item.name }}</td>
                     <td>{{ item.barcode }}</td>
-                    <td>{{ item.price }}$</td>
+                    <td>Rs. {{ item.price }}</td>
                     <td>
                         <button class="btn btn-outline btn-info">More Info</button>
                         <button class="btn btn-outline btn-success">Purchase this Item</button>
